--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </section>
         
         <section class="hero-image">
-            <div class="div-hero-image">
-                <img src="./assets/p1.png" alt="hero image">
+            <div class="div-hero-image">               
+                 <img src="assets/p1.png" alt="hero image">
             </div>
         </section>
     </div>
